configuracion de enpoint y primera implemtacion del offline
